fixed error with close button not working on mobile

--- a/web/cobrands/popravito/base.scss
+++ b/web/cobrands/popravito/base.scss
@@ -1079,6 +1079,7 @@ label[for="message"]{
 
 .filters-container {
     display: flex;
+    max-width: 50vw;
 }
 
 .filter-button {
